<resources>
    <string name="app_name">AndroidAcademyHomework</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="go_to_movie_details">Go to Movie Details</string>
    <string name="back">Back</string>
    <string name="title">Avengers:\nEnd Game</string>
    <string name="age">13+</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="reviews">125 Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="iron">Robert Downey Jr.</string>
    <string name="america">Chris Evans</string>
    <string name="hulk">Mark Ruffalo</string>
    <string name="tor">Chris Hemsworth</string>

    <string name="movies_list_title">Movies list</string>
    <string name="movies_list_card_genre">Action, Adventure, Drama</string>
    <string name="movie_card_title">Avengers: End Game</string>
    <string name="movie_card_time">137 min</string>
    <string name="movie_card_age">13+</string>
</resources>