<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_padding_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/start_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_padding_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/end_margin" />

    <ImageView
        android:id="@+id/arrow"
        android:src="@drawable/ic_arrow"
        android:layout_width="@dimen/arrow_width"
        android:layout_height="@dimen/arrow_height"
        android:layout_marginStart="@dimen/arrow_start_padding"
        android:layout_marginTop="@dimen/arrow_top_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/back_text"
        style="@style/WhiteTextStyle.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginStart="@dimen/back_text_start_padding"
        android:layout_marginTop="@dimen/back_text_top_padding"
        app:layout_constraintStart_toEndOf="@id/arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        style="@style/WhiteTextStyle.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@id/arrow"
        android:layout_marginTop="@dimen/age_top_padding_to_arrow"
        app:layout_constraintStart_toStartOf="@+id/start_padding_guideline" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_top_padding"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="@id/end_padding_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
        app:layout_constraintTop_toBottomOf="@id/age" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/genre_top_padding"
        android:text="@string/genre"
        app:layout_constraintEnd_toEndOf="@id/end_padding_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reviews_top_padding"
        android:text="@string/reviews"
        app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/storyline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/storyline_top_padding_to_reviews"
        android:text="@string/storyline"
        app:layout_constraintEnd_toEndOf="@id/end_padding_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
        app:layout_constraintTop_toBottomOf="@id/reviews" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/description_top_padding"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@id/end_padding_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
        app:layout_constraintTop_toBottomOf="@id/storyline" />

    <TextView
        android:id="@+id/cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cast_top_padding"
        android:text="@string/cast"
        app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
        app:layout_constraintTop_toBottomOf="@id/description" />


</androidx.constraintlayout.widget.ConstraintLayout>