<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_padding_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/start_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_padding_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/end_margin" />

        <ImageView
            android:id="@+id/background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/background_gradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/background_gradient"
            app:layout_constraintBottom_toBottomOf="@id/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="@dimen/movies_detail_arrow_width"
            android:layout_height="@dimen/movies_detail_arrow_height"
            android:layout_marginStart="@dimen/movies_detail_arrow_start_padding"
            android:layout_marginTop="@dimen/movies_detail_arrow_top_padding"
            android:src="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back_text"
            style="@style/BackTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_detail_back_text_start_padding"
            android:layout_marginTop="@dimen/movies_detail_back_text_top_padding"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/back"
            app:layout_constraintStart_toEndOf="@id/arrow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age"
            style="@style/AgeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_age_top_padding_to_arrow"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
            app:layout_constraintTop_toBottomOf="@id/arrow" />

        <TextView
            android:id="@+id/title"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_title_top_padding"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="@id/end_padding_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <TextView
            android:id="@+id/genre"
            style="@style/GenreTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_genre_top_padding"
            android:text="@string/genre"
            app:layout_constraintEnd_toEndOf="@id/end_padding_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:id="@+id/star_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_star_top_padding"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toStartOf="@id/start_padding_guideline"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:tint="@color/star_active" />

        <ImageView
            android:id="@+id/star_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_detail_star_start_padding"
            android:layout_marginTop="@dimen/movies_detail_star_top_padding"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/star_one"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:tint="@color/star_active" />

        <ImageView
            android:id="@+id/star_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_detail_star_start_padding"
            android:layout_marginTop="@dimen/movies_detail_star_top_padding"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@+id/star_two"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:tint="@color/star_active" />

        <ImageView
            android:id="@+id/star_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_detail_star_start_padding"
            android:layout_marginTop="@dimen/movies_detail_star_top_padding"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/star_three"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:tint="@color/star_active" />

        <ImageView
            android:id="@+id/star_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_detail_star_start_padding"
            android:layout_marginTop="@dimen/movies_detail_star_top_padding"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/star_four"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:tint="@color/star_inactive" />

        <TextView
            android:id="@+id/reviews"
            style="@style/ReviewsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/movies_detail_reviews_start_padding"
            android:layout_marginTop="@dimen/movies_detail_reviews_top_padding"
            android:text="@string/reviews"
            app:layout_constraintStart_toEndOf="@+id/star_five"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/storyline"
            style="@style/HeadersTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_storyline_top_padding_to_reviews"
            android:text="@string/storyline"
            app:layout_constraintEnd_toEndOf="@id/end_padding_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
            app:layout_constraintTop_toBottomOf="@id/reviews" />

        <TextView
            android:id="@+id/description"
            style="@style/DescriptionTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_description_top_padding"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="@id/end_padding_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <TextView
            android:id="@+id/cast"
            style="@style/HeadersTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_cast_top_padding"
            android:text="@string/cast"
            app:layout_constraintStart_toStartOf="@+id/start_padding_guideline"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <ImageView
            android:id="@+id/iron_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/movies_detail_actor_image_top_padding"
            android:src="@drawable/robert"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/america_image"
            app:layout_constraintStart_toStartOf="@id/start_padding_guideline"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <TextView
            android:id="@+id/iron_name"
            style="@style/ActorNameTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_actor_name_top_padding"
            android:text="@string/iron"
            app:layout_constraintEnd_toEndOf="@id/iron_image"
            app:layout_constraintStart_toStartOf="@+id/iron_image"
            app:layout_constraintTop_toBottomOf="@id/iron_image" />

        <ImageView
            android:id="@+id/america_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movies_detail_actor_image_start_padding"
            android:src="@drawable/america"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/hulk_image"
            app:layout_constraintStart_toEndOf="@id/iron_image"
            app:layout_constraintTop_toTopOf="@id/iron_image" />

        <TextView
            android:id="@+id/america_name"
            style="@style/ActorNameTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_actor_name_top_padding"
            android:text="@string/america"
            app:layout_constraintEnd_toEndOf="@id/america_image"
            app:layout_constraintStart_toStartOf="@+id/america_image"
            app:layout_constraintTop_toBottomOf="@id/america_image" />

        <ImageView
            android:id="@+id/hulk_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movies_detail_actor_image_start_padding"
            android:src="@drawable/hulk"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/tor_image"
            app:layout_constraintStart_toEndOf="@id/america_image"
            app:layout_constraintTop_toTopOf="@id/iron_image" />

        <TextView
            android:id="@+id/hulk_name"
            style="@style/ActorNameTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_actor_name_top_padding"
            android:text="@string/hulk"
            app:layout_constraintEnd_toEndOf="@id/hulk_image"
            app:layout_constraintStart_toStartOf="@+id/hulk_image"
            app:layout_constraintTop_toBottomOf="@id/hulk_image" />

        <ImageView
            android:id="@+id/tor_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/movies_detail_actor_image_start_padding"
            android:src="@drawable/tor"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/end_padding_guideline"
            app:layout_constraintStart_toEndOf="@id/hulk_image"
            app:layout_constraintTop_toTopOf="@id/iron_image" />

        <TextView
            android:id="@+id/tor_name"
            style="@style/ActorNameTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/movies_detail_actor_name_top_padding"
            android:text="@string/tor"
            app:layout_constraintEnd_toEndOf="@id/tor_image"
            app:layout_constraintStart_toStartOf="@+id/tor_image"
            app:layout_constraintTop_toBottomOf="@id/tor_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>